--- a/Coder-Andy/appsettings.json
+++ b/Coder-Andy/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CoderAndy-3AAC09E6-B943-4BF1-A35F-8C33CAADE4DE;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultMSSQLConnection": "Server=(localdb)\\mssqllocaldb;Database=Coder-Andy;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultMYSQLConnection": "Server=localhost;port=3310;database=coder-andy;uid=coder-andy;password=?6M%!pM5{G_%^Xkd"
   },
   "Logging": {
     "LogLevel": {
