Implemented BlogHelper class for various helper functions within the blog backend, and NameToLink() function to convert strings to URL safe names

--- a/Coder-Andy Tests/Coder-Andy Tests.csproj
+++ b/Coder-Andy Tests/Coder-Andy Tests.csproj
@@ -8,10 +8,18 @@
     <RootNamespace>CoderAndy.Tests</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="nunit" Version="3.11.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.12.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Coder-Andy\Coder-Andy.csproj" />
   </ItemGroup>
 
 </Project>
