Implemented Blog Category Model

--- a/Coder-Andy Tests/Coder-Andy Tests.csproj
+++ b/Coder-Andy Tests/Coder-Andy Tests.csproj
@@ -22,4 +22,10 @@
     <ProjectReference Include="..\Coder-Andy\Coder-Andy.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Html.Abstractions">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.html.abstractions\2.2.0\lib\netstandard2.0\Microsoft.AspNetCore.Html.Abstractions.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
