Committing changes missing from last few commits

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Coder-Andy/wwwroot/css/site.min.css
 Coder-Andy/wwwroot/js/site.min.js
 Coder-Andy Tests/bin/
 Coder-Andy Tests/obj/
+Coder-Andy/package-lock.json
