--- a/Coder-Andy/appsettings.Development.json
+++ b/Coder-Andy/appsettings.Development.json
@@ -1,9 +1,14 @@
 {
+  "ConnectionStrings": {
+    "DefaultMSSQLConnection": "Server=(localdb)\\mssqllocaldb;Database=Coder-Andy;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultMYSQLConnection": "Server=localhost;port=3306;database=coder-andy;uid=coder-andy;password=?6M%!pM5{G_%^Xkd"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "AllowedHosts": "localhost"
 }
