--- a/Coder-Andy/appsettings.json
+++ b/Coder-Andy/appsettings.json
@@ -1,12 +1,8 @@
 {
-  "ConnectionStrings": {
-    "DefaultMSSQLConnection": "Server=(localdb)\\mssqllocaldb;Database=Coder-Andy;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultMYSQLConnection": "Server=localhost;port=6446;database=coder-andy;uid=coder-andy;password=?6M%!pM5{G_%^Xkd"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "coder-andy.com"
 }
